cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Branch_Code_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code_Vehicle__c</fullName>
    <formula>Text(Registered_Vehicle__r.Branch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Code (Vehicle)</label>
    <type>Text</type>
</CustomField>