cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Contact_18ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_18ID__c</fullName>
    <formula>CASESAFEID(Contact__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact 18ID</label>
    <type>Text</type>
</CustomField>