cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Contact_Device_Token__c.field-meta.xml
<CustomField>
    <fullName>Contact_Device_Token__c</fullName>
    <formula>Contact__r.Device__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Device Token</label>
    <type>Text</type>
</CustomField>