cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Date_Plus_Seven__c.field-meta.xml
<CustomField>
    <fullName>Date_Plus_Seven__c</fullName>
    <description>Send Date of the Customer Alert</description>
    <formula>Date__c + 7</formula>
    <label>Date Plus Seven</label>
    <type>Date</type>
</CustomField>