cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/isPush__c.field-meta.xml
<CustomField>
    <fullName>isPush__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPush</label>
    <type>Checkbox</type>
</CustomField>