cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Non_C_C_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Non_C_C_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non C&amp;C Vehicle</label>
    <referenceTo>Non_C_C_Vehicle__c</referenceTo>
    <relationshipLabel>CustomerAlerts</relationshipLabel>
    <relationshipName>CustomerAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>