cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CustomerAlerts</relationshipLabel>
    <relationshipName>CustomerAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>