cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Registered_Vehicle_18ID__c.field-meta.xml
<CustomField>
    <fullName>Registered_Vehicle_18ID__c</fullName>
    <formula>CASESAFEID(Registered_Vehicle__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Vehicle 18ID</label>
    <type>Text</type>
</CustomField>