cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Registered_Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Registered_Vehicle_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Registered_Vehicle_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>