cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Appointment</description>
    <label>Service Appointment</label>
    <referenceTo>Service_Appointment__c</referenceTo>
    <relationshipLabel>CustomerAlerts</relationshipLabel>
    <relationshipName>CustomerAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>