cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Package</label>
    <referenceTo>Service_Packages__c</referenceTo>
    <relationshipLabel>CustomerAlerts</relationshipLabel>
    <relationshipName>CustomerAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>