cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>unread</fullName>
            </value>
            <value>
                <fullName>read</fullName>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
            <value>
                <fullName>eyriuwbicaueiq</fullName>
                <isActive>false</isActive>
                <label>eyriuwbicaueiq</label>
            </value>
            <value>
                <fullName>unred</fullName>
                <isActive>false</isActive>
                <label>unred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>