cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Used_Car_Vehicle_Stock__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Vehicle_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Used Car Vehicle Stock</label>
    <referenceTo>Used_Car_Vehicle_Stock__c</referenceTo>
    <relationshipLabel>CustomerAlerts</relationshipLabel>
    <relationshipName>CustomerAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>