cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/Vehicle_Credit__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Credit</label>
    <referenceTo>Vehicle_Credit__c</referenceTo>
    <relationshipLabel>CustomerAlerts</relationshipLabel>
    <relationshipName>CustomerAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>