cncProd/force-app/main/default/objects/CustomerAlerts__c/fields/VehicleNextServiceDate__c.field-meta.xml
<CustomField>
    <fullName>VehicleNextServiceDate__c</fullName>
    <formula>Registered_Vehicle__r.Next_Service_Booking_Date__c</formula>
    <label>Vehicle Next Service Date</label>
    <type>Date</type>
</CustomField>