cncProd/force-app/main/default/objects/CustomerAlerts__c/recordTypes/Alert.recordType-meta.xml
<RecordType>
    <fullName>Alert</fullName>
    <active>true</active>
    <description>Customer Alert</description>
    <label>Alert</label>
</RecordType>