cncProd/force-app/main/default/objects/CustomerAlerts__c/recordTypes/Broadcast.recordType-meta.xml
<RecordType>
    <fullName>Broadcast</fullName>
    <active>true</active>
    <description>Broadcast-typed Customer Alert</description>
    <label>Broadcast</label>
</RecordType>