cncProd/force-app/main/default/objects/CustomerAlerts__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>SubType__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>